# volara

./: .gitignore  .pre-commit-config.yaml  README.md  frags.py  pyproject.toml
.github/workflows/: docs.yaml  mypy.yaml  ruff.yaml  tests.yaml  ty.yaml
docs/: requirements.txt
docs/source/: api.rst  blog.rst  cli.rst  conf.py  index.rst  install.rst  overview.rst  tutorial.rst
examples/benchmarks/: benchmark_cremi.py  benchmarking_graphs.py
examples/cremi/: cremi.py
examples/cremi/sample_A+_20160601.zarr/affs/: .zarray  .zattrs
examples/cremi/sample_A+_20160601.zarr/affs/0/0/0/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/0/1/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/0/2/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/0/3/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/0/4/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/0/5/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/0/6/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/0/7/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/1/0/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/1/1/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/1/2/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/1/3/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/1/4/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/1/5/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/1/6/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/1/7/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/2/0/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/affs/0/2/1/: 0  1  2  3  4  5  6  7
examples/cremi/sample_A+_20160601.zarr/raw/: .zarray  .zattrs  0.0.0  0.0.1  0.0.2  0.0.3  0.1.0  0.1.1  0.1.2  0.1.3  0.2.0  0.2.1  0.2.2  0.2.3  0.3.0  0.3.1  0.3.2  0.3.3  1.0.0  1.0.1  1.0.2  1.0.3  1.1.0  1.1.1  1.1.2  1.1.3  1.2.0  1.2.1  1.2.2  1.2.3  1.3.0  1.3.1  1.3.2  1.3.3  2.0.0  2.0.1  2.0.2  2.0.3  2.1.0  2.1.1  (+90 more)
examples/getting_started/: basics.py
examples/multires-agglom/: benchmark_mws.py  test.py
tests/: conf.py  conftest.py  test_block_done.py  test_block_funcs.py  test_blockwise.py  test_dataset.py  test_dbs.py  test_models.py
tests/process_block/: aff_agglom.py  argmax.py  graph_mws.py
volara/: __init__.py  cli.py  dataset.py  datasets.py  dbs.py  logging.py  lut.py  models.py  networks.py  pipeline.py  tmp.py  utils.py  workers.py
volara/blockwise/: __init__.py  aff_agglom.py  argmax.py  benchmark.py  binary_extract_frags.py  blockwise.py  cleanup.py  components.py  distance_agglom.py  dummy.py  extract_frags.py  global_seg.py  graph_mws.py  intensity_correction.py  lut.py  mws_pipeline.py  pipeline.py  predict.py  pseudo_affs.py  psuedo_affs.py  register.py  relabel.py  sample_blockwise_volara.py  sample_points.py  seeded_extract_frags.py  threshold.py
(+112 files in other folders)
